reorg, split out more

--- a/SW4STM32/STM32F429I-Discovery/.cproject
+++ b/SW4STM32/STM32F429I-Discovery/.cproject
@@ -34,7 +34,7 @@
 								<option id="gnu.c.compiler.option.debugging.level.1161700749" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.include.paths.936940140" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="../../../HAL_Driver"/>
-									<listOptionValue builtIn="false" value="../../../Inc"/>
+									<listOptionValue builtIn="false" value="../../../Src"/>
 									<listOptionValue builtIn="false" value="../../../freetype/include"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1916916277" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
@@ -51,7 +51,7 @@
 								<option id="gnu.cpp.compiler.option.optimization.level.961593117" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.debugging.level.751234828" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.include.paths.1998005023" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="../../../Inc"/>
+									<listOptionValue builtIn="false" value="../../../Src"/>
 									<listOptionValue builtIn="false" value="../../../freetype/include"/>
 									<listOptionValue builtIn="false" value="../../../HAL_Driver"/>
 								</option>
